2008-10-21  Helmut Eller  <heller@common-lisp.net>

	* swank-allegro.lisp (frame-restartable-p): Handle errors signaled
	by debugger:frame-retryable-p.  This looks like an Allegro
	bug, though.  Reported by Luke Hope.

2008-10-20  Helmut Eller  <heller@common-lisp.net>

	* slime.el: Require some packages, e.g. apropos, at compile time
	to suppress some "undefined function" warnings.

2008-10-19  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (frame-locals-and-catch-tags): New function.
	Fetch locals and catch tags with a single RPC.

	* slime.el (sldb-frame-details): Use it.

	* swank-backend.lisp (frame-catch-tags): Provide a default
	implementation.  Delete the dummy defs in various backends.

2008-10-19  Mark Evenson <evenson@panix.com>

	* swank-abcl.lisp (handle-compiler-warning): Report source
	location position when we can.
	Use NAMESTRING for *compile-filename*.

2008-10-19  Helmut Eller  <heller@common-lisp.net>

	* swank-clisp.lisp (filename-to-pathname, parse-cygwin-filename):
	Accept Windows and Unix filenames when :CYGWIN is in *features*.

2008-10-17  Helmut Eller  <heller@common-lisp.net>

	* swank-sbcl.lisp (swank-compile-file): Fix typo.

2008-10-17  Helmut Eller  <heller@common-lisp.net>

	* swank-backend.lisp (compute-sane-restarts): Deleted. Use plain
	compute restarts instead.

2008-10-17  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (call-with-retry-restart): Implement this a little
	less confusing.

2008-10-17  Helmut Eller  <heller@common-lisp.net>

	* swank-backend.lisp (frame-restartable-p): New function.
	(swank-frame): Deleted. Update implemenetations accordingly.
	(print-frame): Renamed back from print-swank-frame.

	* swank.lisp (backtrace): Don't clutter the backtrace with
	'(:restartable :unknown).  For practical purposes :unknown is the
	same as nil.

	* slime.el (sldb-compute-frame-face): Only accept nil or t for
	the :restartable prop.

2008-10-16  Helmut Eller  <heller@common-lisp.net>
