@@ -1,3 +1,7 @@
+2008-10-23  Helmut Eller  <heller@common-lisp.net>
+
+	* slime.el (slime-redirect-inferior-output): New command.
+
 2008-10-21  Helmut Eller  <heller@common-lisp.net>
 
 	* swank-allegro.lisp (frame-restartable-p): Handle errors signaled
